; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c__get_elem_doc.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c__get_elem_doc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"get_document failed: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"disp == NULL\0A\00", align 1
@IID_IHTMLDocument2 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [42 x i8] c"Could not get IHTMLDocument2 iface: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32*)* @_get_elem_doc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @_get_elem_doc(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @_get_elem_iface(i32 %9, i32* %10)
  store i32* %11, i32** %5, align 8
  store i32* null, i32** %7, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @IHTMLElement_get_document(i32* %12, i32** %7)
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* @S_OK, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %8, align 8
  %19 = call i32 (i32, i8*, ...) @ok(i32 %17, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i32*, i32** %7, align 8
  %21 = icmp ne i32* %20, null
  %22 = zext i1 %21 to i32
  %23 = call i32 (i32, i8*, ...) @ok(i32 %22, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32*, i32** %7, align 8
  %25 = bitcast i32** %6 to i8**
  %26 = call i64 @IDispatch_QueryInterface(i32* %24, i32* @IID_IHTMLDocument2, i8** %25)
  store i64 %26, i64* %8, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @IDispatch_Release(i32* %27)
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* @S_OK, align 8
  %31 = icmp eq i64 %29, %30
  %32 = zext i1 %31 to i32
  %33 = load i64, i64* %8, align 8
  %34 = call i32 (i32, i8*, ...) @ok(i32 %32, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0), i64 %33)
  %35 = load i32*, i32** %6, align 8
  ret i32* %35
}

declare dso_local i32* @_get_elem_iface(i32, i32*) #1

declare dso_local i64 @IHTMLElement_get_document(i32*, i32**) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i64 @IDispatch_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @IDispatch_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
